# projet_python_2_mba

./: .gitignore  Dockerfile  README.md  main.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  main.yml
banking_api/: __init__.py  config.py  main.py
banking_api/models/: __init__.py  schemas.py
banking_api/routers/: __init__.py  customers.py  fraud.py  stats.py  system.py  transactions.py
banking_api/services/: __init__.py  customer_service.py  data_loader.py  fraud_detection_service.py  stats_service.py  system_service.py  transactions_service.py
src/banking_api/: main.py
src/banking_api.egg-info/: PKG-INFO  SOURCES.txt
src/banking_api/models/: transaction.py
src/banking_api/services/: customer_service.py  fraud_detection_service.py  stats_service.py  system_service.py  transactions_service.py
tests/: conftest.py  test_coverage_additional.py  test_edge_cases.py  test_integration.py  test_routes.py  test_services.py
tests/features/: test_features.py
