[project]
name = "banking_api"
version = "1.0.0"
description = "API de transactions bancaires pour MBA ESG"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "pydantic"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"