[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banking-transactions-api"
version = "1.0.0"
description = "API REST pour exposer les données de transactions bancaires fictives."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "MBA2 Student" }]
keywords = ["fastapi", "banking", "transactions", "api"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "pandas-stubs>=2.2.0",
    "types-requests>=2.31.0",
]

[project.scripts]
banking-api = "banking_api.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["banking_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=banking_api --cov-report=term-missing --cov-report=xml -v"
python_files = ["test_*.py"]
python_classes = ["Test*", "Feature*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["banking_api"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
